--- a/style1.css
+++ b/style1.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 12px;
+  font-size: 1em;
   font-family: Helvetica;
 }
 
@@ -70,6 +70,10 @@ a {
   color: #04ddb2;
   text-decoration: underline;
   transform: scale(1.1);
+}
+
+.dropdown-container {
+  display: none;
 }
 
 .main {
