--- a/responsive2.css
+++ b/responsive2.css
@@ -97,24 +97,24 @@
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
-    align-items: center;
-    margin: 5vh ;
-    height: auto;
+    gap: 10px;
   }
 
   .infoot div {
-    width: 150px;
     height: 175px;
-    margin: 2vh 0;
-  }
-
-  .infoot div a {
-    max-width: 20px;
+    width: auto;
   }
 
   .infoot .fola {
     display: inline;
-    width: auto;
+    margin-right: 20px;
+    height: 40px;
+    word-spacing: 20px;
   }
 
+  .fola svg {
+    fill: #04ddb2;
+    width: 20px;
+    height: 20px;
+  }
 }
